# strawberry_pollination_robot

./: README.md
bumblebee_interfaces/: CMakeLists.txt  package.xml
bumblebee_interfaces/msg/: LiftControl.msg  ManipulatorTarget.msg  ManipulatorTargetArray.msg  ObjectData.msg
bumblebee_manipulator/bumblebee_MobileManipulator_ver30_description/: package.xml  setup.cfg  setup.py
bumblebee_manipulator/bumblebee_MobileManipulator_ver30_description/launch/: bumblebee.launch.py  display.launch.py  gazebo.launch.py
bumblebee_manipulator/bumblebee_MobileManipulator_ver30_description/meshes/: base_link.stl  lidar_link_1.stl  lift_link_1.stl  lift_link_2.stl  lift_link_3.stl  manipulator_joint1_1.stl  manipulator_joint2_1.stl  manipulator_joint3_1.stl  manipulator_joint4_1.stl  manipulator_joint5_1.stl  manipulator_joint_base_1.stl  manipulator_joint_endeffector_1.stl  manipulator_joint_pinnacle_1.stl  realsensecamera_link_1.stl  wheel_link_BL_1.stl  wheel_link_BR_1.stl  wheel_link_FL_1.stl  wheel_link_FR_1.stl  zedcamera_link_1.stl
bumblebee_manipulator/bumblebee_MobileManipulator_ver30_description/urdf/: bumblebee_MobileManipulator_ver4.gazebo  bumblebee_MobileManipulator_ver4.trans  bumblebee_MobileManipulator_ver4.xacro  materials.xacro
bumblebee_manipulator/bumblebee_description/: CMakeLists.txt  package.xml
bumblebee_manipulator/bumblebee_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
bumblebee_manipulator/bumblebee_description/ros2_control/: open_manipulator_x_system.ros2_control.xacro
bumblebee_manipulator/bumblebee_launch/: CMakeLists.txt  package.xml
bumblebee_manipulator/bumblebee_launch/config/: gazebo_controller_manager.yaml  hardware_controller_manager.yaml
bumblebee_manipulator/bumblebee_launch/launch/: base.launch.py  hardware.launch.py
bumblebee_manipulator/bumblebee_launch/rviz/: bumblebee_manipulator.rviz
bumblebee_manipulator/bumblebee_manipulator/: CMakeLists.txt  package.xml
bumblebee_manipulator/bumblebee_manipulator/launch/: bumblebee_control.launch.py
bumblebee_manipulator/bumblebee_manipulator/src/: moveit_pose_subscriber_node.cpp
bumblebee_manipulator/bumblebee_world_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
bumblebee_manipulator/bumblebee_world_moveit_config/config/: bumblebee_MobileManipulator_ver4.ros2_control.xacro  bumblebee_MobileManipulator_ver4.srdf  bumblebee_MobileManipulator_ver4.urdf.xacro  bumblebee_MobileManipulator_ver4_backup.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
bumblebee_manipulator/bumblebee_world_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_core.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
publish_target/: CMakeLists.txt  package.xml
publish_target/src/: pose_transform_node.cpp
yolov8_ros/: CMakeLists.txt  package.xml  setup.py
yolov8_ros/yolov8_ros/: yolov8_dis.py
