<?xml version="1.0"?>
<package format="3">
  <name>bumblebee_interfaces</name>
  <version>0.0.1</version>
  <description>Custom message definitions for the Bumblebee project</description>
  <maintainer email="yks09011@naver.com">yks</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- ✅ 메시지 전용 패키지로 설정 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

