<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov8_ros</name>
  <version>0.0.1</version>
  <description>YOLOv8 ROS2 package</description>
  <maintainer email="yks09011@naver.com">yks</maintainer>
  <license>MIT</license>  <!-- ðŸš€ ìˆ˜ì • í•„ìš” -->

  <!-- ë¹Œë“œ ë„êµ¬ ì˜ì¡´ì„± ì¶”ê°€ -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- ë¹Œë“œ & ì‹¤í–‰ ì˜ì¡´ì„± ì¶”ê°€ -->
  <depend>geometry_msgs</depend>
  <depend>bumblebee_interfaces</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <!-- í…ŒìŠ¤íŠ¸ ì˜ì¡´ì„± -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

