<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bumblebee_manipulator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yks@todo.todo">yks</maintainer>
  <license>TODO: License declaration</license>

<depend>rclcpp</depend>
<depend>moveit_core</depend>
<depend>moveit_ros_planning</depend>
<depend>moveit_ros_planning_interface</depend>
<depend>moveit_ros_occupancy_map_monitor</depend>
<depend>moveit_common</depend>
<depend>pluginlib</depend>
<depend>std_msgs</depend>
<depend>sensor_msgs</depend>
<depend>tf2_ros</depend>
<depend>moveit_msgs</depend>
<depend>tf2_geometry_msgs</depend>
<depend>bumblebee_interfaces</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
